Varios/ArgoCD/namespace/ilba-plex/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plexserver
  namespace: ilba-plex
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/app-root: /web
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: plex.ilba.ilimit.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
               service:
                  name: plex-tcp
                  # port: pms-web
                  port:
                     number: 32400
